--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,8 @@ body {
 
 #container {
   height: 100%;
-  outline: solid red 1px;
+  background-color: black;
+  color: #FFFBFE;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -16,4 +17,25 @@ body {
 
 .half {
   flex-grow: 1;
+}
+
+#left {
+  margin-left: 15px;
+}
+#namebox {
+  display: flex;
+  font-size: xx-large;
+}
+
+#bigR {
+  color: #90fcf9;
+  font-weight: 900;
+  text-shadow: -3px 0px #ED254E;
+}
+
+#bigS {
+  color: #ED254E;
+  font-weight: 900;
+  text-shadow: -2px 0px #90fcf9;
+  
 }
