--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,8 @@ body {
 
 #container {
   height: 100%;
-  background-color: black;
-  color: #fffbfe;
+  background-color: white;
+  color: black;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -16,14 +16,15 @@ body {
 }
 
 .half {
-  flex-grow: 1;
+  width: 50vw;
 }
 
 #left {
+  outline: 1px solid red;
   padding-left: 15px;
+  width: 50vw;
 }
 #titlebox {
-  
   font-size: xx-large;
   color: black;
   width: fit-content;
@@ -34,4 +35,25 @@ body {
   font-size: large;
   justify-content: space-evenly;
   text-align: center;
+}
+
+#right {
+  width: 50vw;
+  outline: 1px solid red;
+  display: grid;
+  gap: 1rem;
+  grid-template-rows: repeat(3, 100px);
+  grid-template-columns: repeat(4, 100px);
+}
+
+.box {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  width: 100%;
+  height: 100;
+  background-color: #ed254e;
+  font-size: 3rem;
+  gap: 1rem;
 }
