--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,8 @@ body {
 }
 
 #container {
+  width: inherit;
+  overflow-x: scroll;
   height: 100%;
   background-color: white;
   color: black;
@@ -16,34 +18,33 @@ body {
 }
 
 .half {
-  width: 50vw;
 }
 
 #left {
   outline: 1px solid red;
   padding-left: 15px;
-  width: 50vw;
+  width: 50%;
 }
 #titlebox {
-  font-size: xx-large;
+  font-size: 8vh;
   color: black;
   width: fit-content;
 }
 
 #attributes {
+  font-size: 4vh;
   display: flex;
-  font-size: large;
   justify-content: space-evenly;
   text-align: center;
 }
 
 #right {
-  width: 50vw;
+  width: 50%;
   outline: 1px solid red;
   display: grid;
   gap: 1rem;
-  grid-template-rows: repeat(3, 100px);
-  grid-template-columns: repeat(4, 100px);
+  grid-template-rows: repeat(2, 200px);
+  grid-template-columns: repeat(8, 200px);
 }
 
 .box {
@@ -51,9 +52,6 @@ body {
   justify-content: center;
   align-items: center;
   text-align: center;
-  width: 100%;
-  height: 100;
   background-color: #ed254e;
   font-size: 3rem;
-  gap: 1rem;
 }
