--- a/styles.css
+++ b/styles.css
@@ -30,14 +30,21 @@ body {
   background-color: #5bc0eb;
 }
 
+#name {
+  text-align: center;
+  width: max-content;
+  background-color: #ed254e;
+  padding: 0 1vw 0 1vw;
+}
+
 #title {
-  padding-left: 15px;
-  min-width: 50vw;
+  margin-left: 15px;
+  
 }
 #titlebox {
   font-size: 8vh;
   color: black;
-  width: fit-content;
+  
 }
 
 #attributes {
@@ -70,6 +77,7 @@ body {
   text-align: center;
   font-size: 3rem;
   z-index: 3;
+  box-shadow: 5px 5px 2px 1px rgb(50, 50, 50);
 }
 
 .box:hover {
@@ -97,6 +105,7 @@ body {
   outline: solid black 1px;
   height: 100%;
   aspect-ratio: 16/9;
+  box-shadow: 5px 5px 2px 1px rgb(50, 50, 50);
 }
 
 .videobox:hover {
@@ -118,5 +127,3 @@ body {
   display: flex;
   margin-right: 10vh;
 }
-
-
