--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ body {
 }
 
 #title {
-  margin-left: 15px;
+  margin: 0 20vw 0 5vh;
 }
 #titlebox {
   font-size: 8vh;
@@ -65,6 +65,7 @@ body {
   grid-template-rows: repeat(2, 30vh);
   grid-auto-columns: min-content;
   gap: 1vw;
+  margin: 0 20vh 0 1vw
 }
 
 #extension {
@@ -163,9 +164,22 @@ body {
     margin: 10vh 0vh;
   }
 
+  #titlebox {
+    font-size: 9vw;
+  }
+
+  #name {
+    font-size: 9vw;
+  }
+
+  #attributes {
+    font-size: 5vw;
+    
+  }
+
   .box {
-    width: 30vw;
-    height: 30vw;
+    width: 33vw;
+    height: 33vw;
   }
 
   .videobox {
