--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
   align-items: center;
   font-family: "Open Sans", sans-serif;
   text-align: center;
-  background: linear-gradient(0deg, rgb(102, 102, 255), #ff3f3f);
+  background: linear-gradient(0deg, rgb(253, 131, 31), rgb(102, 102, 255), #ff3f3f);
   color: white
 }
 
