--- a/styles.css
+++ b/styles.css
@@ -9,25 +9,24 @@
   align-items: center;
   font-family: "Open Sans", sans-serif;
   text-align: center;
-  background: linear-gradient(0deg, rgb(253, 131, 31), rgb(102, 102, 255), #ff3f3f);
-  color: white
+
 }
 
-body::-webkit-scrollbar{
+body::-webkit-scrollbar {
   display: none;
 }
 
 .content {
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding-bottom: 100px;
+  padding-bottom: 0px;
 }
 
-.content::-webkit-scrollbar{
+.content::-webkit-scrollbar {
   opacity: 0;
 }
-
 
 h1 {
   font-size: 60px;
@@ -63,19 +62,17 @@ p {
   line-height: normal;
   height: 20vh;
   padding: 40vh 0;
-  
 }
 
 .subtitle {
   margin: auto;
   text-align: center;
   line-height: normal;
-  width: 100vw;
+  
 
   padding: 50px 0;
-  color:white;
+  color: black;
 }
-
 
 .carousel {
   margin: auto;
@@ -100,14 +97,13 @@ p {
   display: none;
 }
 
-
 .carousel iframe {
   aspect-ratio: 16/9;
   width: 400px;
 }
 
-.header{
-  padding-bottom: 50px;
+.header {
+  padding: 50px 0;
 }
 
 .display {
@@ -116,7 +112,8 @@ p {
   flex-wrap: wrap;
   justify-content: space-evenly;
   gap: 35px;
-  width: 75%;
+  padding-bottom: 100px;
+  width: 800px;
 }
 
 .display img {
@@ -124,9 +121,22 @@ p {
   height: 100px;
 }
 
-#skills{
+
+#skills {
   width: 100%;
   padding: 50px 0;
   margin: 50px 0;
   color: white;
+}
+
+#titlescreen {
+  width: 100%;
+  height: 800px;
+  background: linear-gradient(0deg, rgb(102, 102, 255), #ff3f3f); 
+}
+
+.vidgrid {
+  display: grid;
+  grid-template-rows: repeat(2, 400px);
+  grid-auto-columns: auto;
 }
