--- a/styles.css
+++ b/styles.css
@@ -1,192 +1,297 @@
-html,
+:root {
+  --darkest: #000814;
+  --lightest: #f5f5f5;
+  --dark: #001d3d;
+  --mid: #003566;
+  --highlight: hsl(50, 100%, 52%);
+  --darkhighleight: #ffc300;
+}
+
 body {
-  margin: 0px;
-  height: 100%;
+  background-color: var(--darkest);
+  color: var(--lightest);
+  font-family: "Work Sans", sans-serif;
 }
 
-#container {
-  overflow-x: scroll;
-  height: 100vh;
+.navbar {
+  z-index: 1;
+  position: fixed;
+  height: 50px;
   width: 100vw;
-  background-color: white;
-  color: black;
+  font-weight: 500;
+  font-size: 20px;
   display: flex;
-  flex-direction: row;
+  justify-content: space-evenly;
   align-items: center;
-  font-family: "Open Sans", sans-serif;
+  color: var(--highlight);
+  text-transform: uppercase;
+  background-color: rgba(27, 27, 27, 0.5);
 }
 
-#container::-webkit-scrollbar {
-  opacity: 0%;
+.navBtn {
+  color: var(--highlight);
+  text-transform: uppercase;
+  background: none;
+  border: none;
+  cursor:pointer;
+  font-weight: 500;
+  font-size: 20px;
 }
 
-#container::-webkit-scrollbar-thumb {
-  background-color: #ed254e;
+.navBtn:hover {
+  cursor: pointer;
 }
 
-#container::-webkit-scrollbar-button {
-  background-color: #5bc0eb;
-}
-
-#name {
-  text-align: center;
-  width: max-content;
-  background-color: #ed254e;
-  padding: 5px 10px;
-  box-shadow: 5px 5px 2px 1px rgb(50, 50, 50);
-}
-
-#title {
-  margin-left: 15px;
-}
-#titlebox {
-  font-size: 8vh;
-  color: black;
+.main {
+  margin: auto;
+  max-width: 1200px;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  gap: 100px;
+  padding-bottom: 200px;
+}
+.intro {
+  padding-top: 120px;
+  display: flex;
+  gap: 80px;
+  margin: auto;
+  transform: translateX(40px);
+}
+.intro > img {
+  transform: translateY(-90px);
+}
+
+.title {
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: center;
+  text-transform: uppercase;
+  font-weight: 700;
+}
+
+.title > h1 {
+  font-size: 120px;
+  color: var(--highlight);
+}
+
+.title > h2 {
+  font-size: 80px;
+  background-color: var(--highlight);
+  color: var(--darkest);
+}
+
+.title > h3 {
+  font-size: 40px;
+  color: var(--highlight);
+}
+
+.bio {
+  font-weight: 500;
+  font-size: large;
+  line-height: 30px;
+}
+
+.secHeader {
+  font-size: 45px;
+  text-transform: uppercase;
+  color: var(--highlight);
+  font-weight: 700;
+  padding-bottom: 50px;
+}
+
+.skillDisplay {
+  flex-wrap: wrap;
+  display: flex;
+  gap: 50px;
+  align-content: space-evenly;
+  justify-content: center;
+}
+
+.skillDisplay > img {
+  width: 100px;
+  aspect-ratio: 1/1;
+}
+
+.project-display {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
   gap: 20px;
 }
 
-#attributes {
-  font-size: 4vh;
-  display: flex;
-  justify-content: space-between;
-  text-align: center;
+.project-card {
+  --padding: 1em;
+  background-color: var(--dark);
+  border-radius: .25rem;
+  transition: 200ms transform ease-in-out;
+  box-shadow: 0 2px 5px 0 var(--dark);
+  overflow: hidden;
 }
 
-#attributes > h2 {
-  padding: 5px 10px;
-  box-shadow: 5px 5px 2px 1px rgb(50, 50, 50);
+.project-body {
+  padding: 0 var(--padding);
 }
 
-.content-grid {
-  display: grid;
-  grid-auto-flow: column;
-  grid-template-rows: repeat(2, 30vh);
-  grid-auto-columns: min-content;
-  gap: 1vw;
+.project-card:hover, .project-card:focus {
+  transform: scale(1.025);
 }
 
-#extension {
-  padding-left: 10px;
-  padding-right: 10px;
-  outline: solid greenyellow 2px;
+.project-header {
+  font-size: 1.5rem;
+  margin-bottom: .5rem;
+  padding: var(--padding);
+  padding-bottom: 0;
 }
 
-.box {
-  width: 30vh;
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  font-size: 3rem;
-  box-shadow: 5px 5px 2px 1px rgb(50, 50, 50);
+.project-header.project-image {
+  display: block;
+  padding: 0;
 }
 
-.box:hover {
-  animation: hovertest;
-  animation-duration: 500ms;
-  animation-fill-mode: forwards;
-}
-
-@keyframes hovertest {
-  0% {
-  }
-
-  100% {
-    background: #5bc0eb;
-  }
-}
-
-.videocont {
-  opacity: 0;
-  width: auto;
-  height: 100%;
-}
-
-.videobox {
-  outline: solid black 1px;
-  height: 100%;
+.project-header.project-image > img{
+  overflow: hidden;
+  width: 100%;
   aspect-ratio: 16/9;
-  box-shadow: 5px 5px 2px 1px rgb(50, 50, 50);
+  object-fit: cover;
+  object-position: center;
 }
 
-.videobox:hover {
-  animation: hide 500ms 1s forwards;
+.project-footer {
+  margin-top: .5rem;
+  padding: 0 var(--padding);
+  padding-top: 0;
+  
+  padding-bottom: var(--padding);
 }
 
-@keyframes reveal {
-  100% {
-    opacity: 100%;
-  }
-}
-
-@keyframes hide {
-  100% {
-    opacity: 0%;
-  }
-}
-#content {
-  display: flex;
-  margin-right: 10vh;
+.contact {
   width: 100%;
 }
 
-@media (orientation: portrait) {
-  #container {
-    flex-direction: column;
-    overflow-x: hidden;
-    outline: solid rgb(189, 189, 189) 2px;
+.contactDisplay
+{
+  transform: translateY(-50px);
+  display: flex;
+  justify-content: space-between;
+  align-items: flex-end;
+}
+
+.contactContent{
+  width: 40%;
+}
+
+.contactMessage {
+  line-height: 1.25rem;
+}
+
+.contactForm{
+  display: grid;
+  margin-top: 3rem;
+  grid-template-columns: 150px 205px;
+  column-gap: 4rem;
+  row-gap: 1rem;
+  grid-template-areas: 
+  "name email"
+  "message message";
+}
+
+.contactForm > label,input,textarea {
+  display: block;
+  padding: 0.25rem;
+}
+
+.contactForm > input, textarea, .contactForm>label>input{
+  background-color: var(--mid);
+  color: var(--lightest);
+  border: none;
+  margin-top: 10px;
+  font-size: 1rem;
+}
+
+
+#name {
+  grid-area: name;
+}
+
+#email {
+  grid-area: email;
+  width: 100%;
+}
+
+#message {
+  grid-area: message;
+  resize: none;
+  width: 100%;
+}
+
+@media (max-width: 1200px) {
+  .main{
+    width: 90%;
+  }
+  .intro {
+    flex-direction: column-reverse;
+    align-items: center;
+    gap: 0;
+  }
+
+  .intro > img {
+    transform: none;
+  }
+}
+
+@media (max-width: 1000px) {
+  .contactContent {
     width: auto;
-    align-items: center;
-    
   }
 
-  #content {
+  .contactForm{
+    padding-top: 3rem;
+    width: fit-content;
+    margin: auto;
+
+  }
+  .contactImg {
+    height: 250px;
+
+    margin: auto;
+  }
+
+  .contact {
     flex-direction: column;
-    margin-right: 0;
-    align-items: center;
+  }
+  .contactDisplay {
+    display: flex;
+    flex-direction: column;
+    transform: none;
   }
 
-  .content-grid {
-    grid-auto-flow: row;
-    grid-template-rows: unset;
-    grid-template-columns: repeat(2, 33vw);
-    grid-auto-columns: unset;
-    grid-auto-rows: unset;
-    gap: 5vw;
-    margin: 5vw 0 10vw 0;
+}
+
+@media (max-width: 500px) {
+  .title > h1 {
+    font-size: 90px;
+    color: var(--highlight);
   }
 
-  #title {
-    margin: 10vh 0vh;
+  .intro {
+    padding-top: 50px;
+    gap: 80px;
+    transform: none;
   }
 
-  #titlebox {
-    font-size: 9vw;
+  .intro > img {
   }
-
-  #name {
-    font-size: 9vw;
+  
+  .title > h2 {
+    font-size: 60px;
+    background-color: var(--highlight);
+    color: var(--darkest);
   }
-
-  #attributes {
-    font-size: 5vw;
-    
-  }
-
-  .box {
-    width: 33vw;
-    height: 33vw;
-  }
-
-  .videobox {
-    width: 100%;
-    height: auto;
-  }
-
-  body {
-    overflow-y: hidden;
+  
+  .title > h3 {
+    font-size: 30px;
+    color: var(--highlight);
   }
 }
